--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "ibm-watson": "^6.1.1",
     "mongoose": "^5.13.5"
   }
 }
