--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "ibm-watson": "^6.1.1",
-    "mongoose": "^5.13.5"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.5",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0"
   }
 }
