--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ibm-watson": "^6.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.5",
+    "multer": "^1.4.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
   }
